--- a/package/Cargo.toml
+++ b/package/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rowid"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Alpheus Tang"]
 edition = "2021"
 description = """
@@ -32,4 +32,4 @@ name = "rowid"
 path = "src/lib.rs"
 
 [dependencies]
-rand = "0.8.5"
+rand = "~0.8.5"
