--- a/package/Cargo.toml
+++ b/package/Cargo.toml
@@ -3,6 +3,7 @@ name = "rowid"
 version = "0.4.1"
 authors = ["Alpheus Tang"]
 edition = "2024"
+rust-version = "1.85.0"
 description = """
 A time-based unique ID solution
 """
