--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
           interval: "daily"
           time: "00:00"
           timezone: "Etc/UTC"
+      ignore:
+          - dependency-name: "rand"
+            update-types:
+                - "version-update:semver-patch"
