--- a/package/Cargo.toml
+++ b/package/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rowid"
-version = "0.5.0"
+version = "0.5.1"
 authors = ["Alpheus Tang"]
 edition = "2024"
 rust-version = "1.85.0"
@@ -8,8 +8,8 @@ description = """
 A time-based unique ID solution
 """
 readme = "README.md"
-homepage = "https://github.com/alpheus-day/rowid.rs"
-repository = "https://github.com/alpheus-day/rowid.rs"
+homepage = "https://github.com/alpheusday/rowid.rs"
+repository = "https://github.com/alpheusday/rowid.rs"
 license = "MIT"
 keywords = [
     "rowid",
@@ -27,10 +27,6 @@ include = [
     "Cargo.toml",
     "README.md",
 ]
-
-[lib]
-name = "rowid"
-path = "src/lib.rs"
 
 [dependencies]
 rand = "~0.9.0"
